# ToneProject

./: .gitmodules  CMakeLists.txt  JoyController.cpp  PixelController.cpp  README.md  main.py  requirements.txt
libs/ToneOS/: BluetoothController.cpp  BluetoothController.h  JoyController.h  PixelController.h  ToneController.cpp  ToneController.h  toneOS.ino
libs/ToneTerminal/: .env  bluetooth_utils.py  utils.py
